--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -4,6 +4,27 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^26.0.15",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/recharts": "^1.8.19",
+    "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "@types/redux-logger": "^3.0.8",
+    "react-redux": "^7.2.2",
+    "recharts": "^2.0.8",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "web-vitals": "^1.0.1",
     "@ckeditor/ckeditor5-build-classic": "^24.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.0",
     "@ckeditor/ckeditor5-upload": "^24.0.0",
@@ -39,6 +60,8 @@
     "react-dropzone": "^11.2.4",
     "sanitize-html": "^2.3.0",
     "style-loader": "^2.0.0",
+    "ts-loader": "^8.1.0",
+    "typescript": "^4.2.4",
     "url": "^0.11.0",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
