--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^24.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.0",
+    "@ckeditor/ckeditor5-upload": "^24.0.0",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,17 +24,6 @@
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-logger": "^3.0.8",
-    "react-redux": "^7.2.2",
-    "recharts": "^2.0.8",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-logger": "^3.0.6",
-    "web-vitals": "^1.0.1",
-    "@ckeditor/ckeditor5-build-classic": "^24.0.0",
-    "@ckeditor/ckeditor5-react": "^3.0.0",
-    "@ckeditor/ckeditor5-upload": "^24.0.0",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
     "emoji-picker-react": "^3.4.2",
     "global": "^4.4.0",
@@ -40,18 +34,25 @@
     "prop-types": "^15.7.2",
     "qs": "^6.9.6",
     "query-string": "^6.14.1",
+    "react-helmet": "^6.1.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.2",
     "react-tooltip": "^4.2.11",
     "recharts": "^2.0.8",
-    "signalr-no-jquery": "^0.2.0"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "signalr-no-jquery": "^0.2.0",
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
     "@material-ui/core": "^4.11.3",
+    "@types/react-helmet": "^6.1.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "moment": "^2.29.1",
